feat(primitives): added integer object

--- a/src/Off.Net.Pdf.Core/Off.Net.Pdf.Core.csproj
+++ b/src/Off.Net.Pdf.Core/Off.Net.Pdf.Core.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="Properties\Resource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>Off.Net.Pdf.Core</CustomToolNamespace>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
