--- a/.editorconfig
+++ b/.editorconfig
@@ -8,12 +8,21 @@ insert_final_newline = true
 
 # ReSharper properties
 resharper_max_initializer_elements_on_line = 1
+resharper_parentheses_redundancy_style = remove_if_not_clarifies_precedence
+resharper_qualified_using_at_nested_scope = true
 resharper_wrap_array_initializer_style = chop_if_long
 
-[*.cs]
+# Microsoft .NET properties
+dotnet_style_parentheses_in_arithmetic_binary_operators = never_if_unnecessary:none
+dotnet_style_parentheses_in_other_binary_operators = always_for_clarity:none
+dotnet_style_parentheses_in_relational_binary_operators = never_if_unnecessary:none
+
+[*.{cs,vb}]
 indent_size = 4
-dotnet_sort_system_directives_first = true
+tab_width = 4
+end_of_line = crlf
 max_line_length = 200
+dotnet_sort_system_directives_first = true
 
 # Don't use this. qualifier
 dotnet_style_qualification_for_field = false:suggestion
@@ -38,7 +47,7 @@ csharp_new_line_before_open_brace = all
 csharp_new_line_before_else = true
 csharp_new_line_before_catch = true
 csharp_new_line_before_finally = true
-csharp_new_line_before_members_in_object_initializers = true
+csharp_new_line_before_members_in_object_initializers = false
 csharp_new_line_before_members_in_anonymous_types = true
 
 # Namespace settings
@@ -63,31 +72,82 @@ csharp_style_deconstructed_variable_declaration = true:suggestion
 csharp_style_prefer_top_level_statements = true:silent
 csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
 csharp_style_unused_value_expression_statement_preference = discard_variable:silent
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
 
-# IDE0090: Use 'new(...)'
+dotnet_style_coalesce_expression = true:suggestion
+dotnet_style_null_propagation = true:suggestion
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
+dotnet_style_prefer_auto_properties = true:silent
+dotnet_style_object_initializer = true:suggestion
+dotnet_style_collection_initializer = true:suggestion
+dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
+dotnet_style_prefer_conditional_expression_over_assignment = true:silent
+dotnet_style_prefer_conditional_expression_over_return = true:silent
+dotnet_style_explicit_tuple_names = true:suggestion
+dotnet_style_prefer_inferred_tuple_names = true:suggestion
+dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
+dotnet_style_prefer_compound_assignment = true:suggestion
+dotnet_style_prefer_simplified_interpolation = true:suggestion
+dotnet_style_namespace_match_folder = true:suggestion
 csharp_style_implicit_object_creation_when_type_is_apparent = false:warning
+dotnet_style_allow_multiple_blank_lines_experimental = false
 
-[*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
-indent_size = 2
+#### Naming styles ####
 
-# Xml config files
-[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
-indent_size = 2
+# Naming rules
 
-[*.json]
-indent_size = 2
+dotnet_naming_rule.interface_should_be_begins_with_i.severity = suggestion
+dotnet_naming_rule.interface_should_be_begins_with_i.symbols = interface
+dotnet_naming_rule.interface_should_be_begins_with_i.style = begins_with_i
 
-[*.{ps1,psm1}]
-indent_size = 4
+dotnet_naming_rule.types_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.types_should_be_pascal_case.symbols = types
+dotnet_naming_rule.types_should_be_pascal_case.style = pascal_case
 
-[*.sh]
-indent_size = 4
-end_of_line = lf
+dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
+dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
-[*.{razor,cshtml}]
-charset = utf-8-bom
+dotnet_naming_rule.private_or_internal_field_should_be_field.severity = error
+dotnet_naming_rule.private_or_internal_field_should_be_field.symbols = private_or_internal_field
+dotnet_naming_rule.private_or_internal_field_should_be_field.style = camel_case
 
-[*.{cs,vb}]
+# Symbol specifications
+
+dotnet_naming_symbols.interface.applicable_kinds = interface
+dotnet_naming_symbols.interface.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
+dotnet_naming_symbols.interface.required_modifiers = 
+
+dotnet_naming_symbols.types.applicable_kinds = class, struct, interface, enum
+dotnet_naming_symbols.types.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
+dotnet_naming_symbols.types.required_modifiers = 
+
+dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, method
+dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
+dotnet_naming_symbols.non_field_members.required_modifiers = 
+
+dotnet_naming_symbols.private_or_internal_field.applicable_kinds = field
+dotnet_naming_symbols.private_or_internal_field.applicable_accessibilities = internal, private, private_protected
+dotnet_naming_symbols.private_or_internal_field.required_modifiers = 
+
+# Naming styles
+
+dotnet_naming_style.begins_with_i.required_prefix = I
+dotnet_naming_style.begins_with_i.required_suffix = 
+dotnet_naming_style.begins_with_i.word_separator = 
+dotnet_naming_style.begins_with_i.capitalization = pascal_case
+
+dotnet_naming_style.pascal_case.required_prefix = 
+dotnet_naming_style.pascal_case.required_suffix = 
+dotnet_naming_style.pascal_case.word_separator = 
+dotnet_naming_style.pascal_case.capitalization = pascal_case
+
+dotnet_naming_style.camel_case.required_prefix = 
+dotnet_naming_style.camel_case.required_suffix = 
+dotnet_naming_style.camel_case.word_separator = 
+dotnet_naming_style.camel_case.capitalization = camel_case
+
+#### Diagnostic Rules ####
 
 # CA1018: Mark attributes with AttributeUsageAttribute
 dotnet_diagnostic.ca1018.severity = warning
@@ -142,10 +202,12 @@ dotnet_diagnostic.ca1829.severity = warning
 dotnet_diagnostic.ca1830.severity = warning
 
 # CA1831: Use AsSpan or AsMemory instead of Range-based indexers when appropriate
-# CA1832: Use AsSpan or AsMemory instead of Range-based indexers when appropriate
-# CA1833: Use AsSpan or AsMemory instead of Range-based indexers when appropriate
 dotnet_diagnostic.ca1831.severity = warning
+
+# CA1832: Use AsSpan or AsMemory instead of Range-based indexers when appropriate
 dotnet_diagnostic.ca1832.severity = warning
+
+# CA1833: Use AsSpan or AsMemory instead of Range-based indexers when appropriate
 dotnet_diagnostic.ca1833.severity = warning
 
 # CA1834: Consider using 'StringBuilder.Append(char)' when applicable
@@ -268,133 +330,28 @@ dotnet_diagnostic.ide0062.severity = warning
 dotnet_diagnostic.ide0161.severity = warning
 
 # IDE2000: Disallow multiple blank lines
-dotnet_style_allow_multiple_blank_lines_experimental = false
 dotnet_diagnostic.ide2000.severity = warning
 
-[{eng/tools/**.cs, **/{test,testassets,samples,Samples,perf}/**.cs}]
-# CA1018: Mark attributes with AttributeUsageAttribute
-dotnet_diagnostic.ca1018.severity = suggestion
-# CA1507: Use nameof to express symbol names
-dotnet_diagnostic.ca1507.severity = suggestion
-# CA1802: Use literals where appropriate
-dotnet_diagnostic.ca1802.severity = suggestion
-# CA1805: Do not initialize unnecessarily
-dotnet_diagnostic.ca1805.severity = suggestion
-# CA1810: Do not initialize unnecessarily
-dotnet_diagnostic.ca1810.severity = suggestion
-# CA1822: Make member static
-dotnet_diagnostic.ca1822.severity = suggestion
-# CA1823: Avoid zero-length array allocations
-dotnet_diagnostic.ca1825.severity = suggestion
-# CA1826: Do not use Enumerable methods on indexable collections. Instead use the collection directly
-dotnet_diagnostic.ca1826.severity = suggestion
-# CA1827: Do not use Count() or LongCount() when Any() can be used
-dotnet_diagnostic.ca1827.severity = suggestion
-# CA1829: Use Length/Count property instead of Count() when available
-dotnet_diagnostic.ca1829.severity = suggestion
-# CA1834: Consider using 'StringBuilder.Append(char)' when applicable
-dotnet_diagnostic.ca1834.severity = suggestion
-# CA1835: Prefer the 'Memory'-based overloads for 'ReadAsync' and 'WriteAsync'
-dotnet_diagnostic.ca1835.severity = suggestion
-# CA1837: Use 'Environment.ProcessId'
-dotnet_diagnostic.ca1837.severity = suggestion
-# CA1838: Avoid 'StringBuilder' parameters for P/Invokes
-dotnet_diagnostic.ca1838.severity = suggestion
-# CA1841: Prefer Dictionary.Contains methods
-dotnet_diagnostic.ca1841.severity = suggestion
-# CA1844: Provide memory-based overrides of async methods when subclassing 'Stream'
-dotnet_diagnostic.ca1844.severity = suggestion
-# CA1845: Use span-based 'string.Concat'
-dotnet_diagnostic.ca1845.severity = suggestion
-# CA1846: Prefer AsSpan over Substring
-dotnet_diagnostic.ca1846.severity = suggestion
-# CA1847: Use string.Contains(char) instead of string.Contains(string) with single characters
-dotnet_diagnostic.ca1847.severity = suggestion
-# CA2008: Do not create tasks without passing a TaskScheduler
-dotnet_diagnostic.ca2008.severity = suggestion
-# CA2012: Use ValueTask correctly
-dotnet_diagnostic.ca2012.severity = suggestion
-# CA2249: Use string.Contains instead of string.IndexOf to improve readability.
-dotnet_diagnostic.ca2249.severity = suggestion
-# IDE0005: Remove unnecessary usings
-dotnet_diagnostic.ide0005.severity = suggestion
-# IDE0044: Make field readonly
-dotnet_diagnostic.ide0044.severity = suggestion
-# IDE0051: Remove unused private members
-dotnet_diagnostic.ide0051.severity = suggestion
-# IDE0059: Unnecessary assignment to a value
-dotnet_diagnostic.ide0059.severity = suggestion
-# IDE0060: Remove unused parameters
-dotnet_diagnostic.ide0060.severity = suggestion
-# IDE0062: Make local function static
-dotnet_diagnostic.ide0062.severity = suggestion
+# SA1600: Elements should be documented
+dotnet_diagnostic.sa1600.severity = none
 
-# CA2016: Forward the 'CancellationToken' parameter to methods that take one
-dotnet_diagnostic.ca2016.severity = suggestion
+[*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
+indent_size = 2
 
-[*.{cs,vb}]
-#### Naming styles ####
+# Xml config files
+[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
+indent_size = 2
 
-# Naming rules
+[*.json]
+indent_size = 2
 
-dotnet_naming_rule.interface_should_be_begins_with_i.severity = suggestion
-dotnet_naming_rule.interface_should_be_begins_with_i.symbols = interface
-dotnet_naming_rule.interface_should_be_begins_with_i.style = begins_with_i
-
-dotnet_naming_rule.types_should_be_pascal_case.severity = suggestion
-dotnet_naming_rule.types_should_be_pascal_case.symbols = types
-dotnet_naming_rule.types_should_be_pascal_case.style = pascal_case
-
-dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = suggestion
-dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
-dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
-
-# Symbol specifications
-
-dotnet_naming_symbols.interface.applicable_kinds = interface
-dotnet_naming_symbols.interface.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-dotnet_naming_symbols.interface.required_modifiers =
-
-dotnet_naming_symbols.types.applicable_kinds = class, struct, interface, enum
-dotnet_naming_symbols.types.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-dotnet_naming_symbols.types.required_modifiers =
-
-dotnet_naming_symbols.non_field_members.applicable_kinds = property, event, method
-dotnet_naming_symbols.non_field_members.applicable_accessibilities = public, internal, private, protected, protected_internal, private_protected
-dotnet_naming_symbols.non_field_members.required_modifiers =
-
-# Naming styles
-
-dotnet_naming_style.begins_with_i.required_prefix = I
-dotnet_naming_style.begins_with_i.required_suffix =
-dotnet_naming_style.begins_with_i.word_separator =
-dotnet_naming_style.begins_with_i.capitalization = pascal_case
-
-dotnet_naming_style.pascal_case.required_prefix =
-dotnet_naming_style.pascal_case.required_suffix =
-dotnet_naming_style.pascal_case.word_separator =
-dotnet_naming_style.pascal_case.capitalization = pascal_case
-
-dotnet_naming_style.pascal_case.required_prefix =
-dotnet_naming_style.pascal_case.required_suffix =
-dotnet_naming_style.pascal_case.word_separator =
-dotnet_naming_style.pascal_case.capitalization = pascal_case
-dotnet_style_operator_placement_when_wrapping = beginning_of_line
-tab_width = 4
+[*.{ps1,psm1}]
 indent_size = 4
-end_of_line = crlf
-dotnet_style_coalesce_expression = true:suggestion
-dotnet_style_null_propagation = true:suggestion
-dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
-dotnet_style_prefer_auto_properties = true:silent
-dotnet_style_object_initializer = true:suggestion
-dotnet_style_collection_initializer = true:suggestion
-dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
-dotnet_style_prefer_conditional_expression_over_assignment = true:silent
-dotnet_style_prefer_conditional_expression_over_return = true:silent
-dotnet_style_explicit_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
-dotnet_style_prefer_compound_assignment = true:suggestion
-dotnet_style_prefer_simplified_interpolation = true:suggestion
-dotnet_style_namespace_match_folder = true:suggestion
+
+[*.sh]
+indent_size = 4
+end_of_line = lf
+
+[*.{razor,cshtml}]
+charset = utf-8-bom
+
