--- a/benchmarks/Off.Net.Pdf.Core.Benchmarks/Off.Net.Pdf.Core.Benchmarks.csproj
+++ b/benchmarks/Off.Net.Pdf.Core.Benchmarks/Off.Net.Pdf.Core.Benchmarks.csproj
@@ -11,6 +11,7 @@
     <Optimize>true</Optimize>
     <Configuration>Release</Configuration>
     <IsPackable>false</IsPackable>
+    <SonarQubeExclude>true</SonarQubeExclude>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
