--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,8 +45,9 @@ jobs:
     name: Sonar Scan
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    if: ${{ !contains(github.event.head_commit.author.email, 'dependabot') || github.event_name != 'pull_request' }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Cache NuGet modules
@@ -99,7 +100,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuget-
       - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v2
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0.x
       - name: Restore dependencies
