--- a/benchmarks/Off.Net.Pdf.Core.Benchmarks/Off.Net.Pdf.Core.Benchmarks.csproj
+++ b/benchmarks/Off.Net.Pdf.Core.Benchmarks/Off.Net.Pdf.Core.Benchmarks.csproj
@@ -14,8 +14,8 @@
     <SonarQubeExclude>true</SonarQubeExclude>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
-    <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.13.5" />
+    <PackageReference Include="BenchmarkDotNet" />
+    <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Off.Net.Pdf.Core\Off.Net.Pdf.Core.csproj" />
