--- a/tests/OffDotNet.Pdf.Core.Tests/OffDotNet.Pdf.Core.Tests.csproj
+++ b/tests/OffDotNet.Pdf.Core.Tests/OffDotNet.Pdf.Core.Tests.csproj
@@ -4,4 +4,12 @@
     <ProjectReference Include="..\..\src\OffDotNet.Pdf.Core\OffDotNet.Pdf.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NSubstitute" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
