--- a/src/OffDotNet.Pdf.CodeAnalysis/OffDotNet.Pdf.CodeAnalysis.csproj
+++ b/src/OffDotNet.Pdf.CodeAnalysis/OffDotNet.Pdf.CodeAnalysis.csproj
@@ -8,11 +8,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Syntax\InternalSyntax\" />
+      <Compile Remove="Syntax\InternalSyntax\SyntaxNodeFactory.cs" />
+      <Compile Update="Resources.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Resources.resx</DependentUpon>
+      </Compile>
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Remove="Syntax\InternalSyntax\SyntaxNodeFactory.cs" />
+      <EmbeddedResource Update="Resources.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>CodeAnalysisResources.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
 
 </Project>
