--- a/tests/OffDotNet.Pdf.CodeAnalysis.Tests/OffDotNet.Pdf.CodeAnalysis.Tests.csproj
+++ b/tests/OffDotNet.Pdf.CodeAnalysis.Tests/OffDotNet.Pdf.CodeAnalysis.Tests.csproj
@@ -1,2 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\OffDotNet.Pdf.CodeAnalysis\OffDotNet.Pdf.CodeAnalysis.csproj" />
+  </ItemGroup>
 </Project>
