--- a/src/OffDotNet.Pdf.CodeAnalysis/OffDotNet.Pdf.CodeAnalysis.csproj
+++ b/src/OffDotNet.Pdf.CodeAnalysis/OffDotNet.Pdf.CodeAnalysis.csproj
@@ -2,4 +2,17 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.ObjectPool" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="PDFResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PDFResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="PDFResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>PDFResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
