--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ ubuntu-latest, windows-latest, macOS-latest ]
-        dotnet-version: [ "6.0.x", "7.0.x" ]
+        dotnet-version: [ "6.0.x", "7.0.x", "8.0.x" ]
 
     steps:
       - name: Checkout
@@ -61,6 +61,10 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: 6.0.x
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: Restore dependencies
         run: dotnet restore
       - name: Sonarqube Begin
