--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -85,6 +85,6 @@ jobs:
       - name: Test
         run: dotnet test --no-build --verbosity normal --logger:trx --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
       - name: Sonarqube End
-        run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        run: dotnet sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
