--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,7 @@ spelling_exclusion_path = SpellingExclusions.dic
 indent_size = 4
 insert_final_newline = true
 charset = utf-8-bom
+max_line_length = 160
 
 # XML project files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
