--- a/stryker-config.json
+++ b/stryker-config.json
@@ -6,9 +6,9 @@
       "name": "github.com/sunt-programator/off-dotnet",
       "version": "main"
     },
-    "project": "OffDotNet.Pdf.Core.csproj",
+    "project": "OffDotNet.CodeAnalysis.csproj",
     "test-projects": [
-      "./tests/OffDotNet.Pdf.Core.Tests/OffDotNet.Pdf.Core.Tests.csproj"
+      "./tests/OffDotNet.CodeAnalysis.Tests/OffDotNet.CodeAnalysis.Tests.csproj"
     ]
   }
 }
