--- a/src/OffDotNet.CodeAnalysis/OffDotNet.CodeAnalysis.csproj
+++ b/src/OffDotNet.CodeAnalysis/OffDotNet.CodeAnalysis.csproj
@@ -2,4 +2,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
   </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="OffDotNet.CodeAnalysis.Pdf"/>
+    <InternalsVisibleTo Include="OffDotNet.CodeAnalysis.Tests"/>
+    <InternalsVisibleTo Include="OffDotNet.CodeAnalysis.Pdf.Tests"/>
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2"/>
+  </ItemGroup>
 </Project>
