--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -8,5 +8,9 @@
     <Compile Include="$(MSBuildThisFileDirectory)GlobalUsings.cs"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" />
+  </ItemGroup>
+
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))"/>
 </Project>
