--- a/.editorconfig
+++ b/.editorconfig
@@ -253,6 +253,7 @@ csharp_preserve_single_line_statements = true
 dotnet_diagnostic.IDE0060.severity = warning
 
 # Nullable are treated as errors
+dotnet_diagnostic.CS8618.severity = error
 dotnet_diagnostic.CS8625.severity = error
 
 # SA1500: Braces for multi-line statements should not share line
