--- a/src/OffDotNet.CodeAnalysis/OffDotNet.CodeAnalysis.csproj
+++ b/src/OffDotNet.CodeAnalysis/OffDotNet.CodeAnalysis.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Localization" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" />
   </ItemGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="OffDotNet.CodeAnalysis.Pdf"/>
