--- a/.editorconfig
+++ b/.editorconfig
@@ -171,6 +171,9 @@ dotnet_diagnostic.SA1308.severity = none
 # SA1311: Static readonly fields should begin with upper-case letter
 dotnet_diagnostic.SA1311.severity = none
 
+# SA1503: Braces should not be omitted
+dotnet_diagnostic.SA1503.severity = none
+
 # CSharp code style settings:
 [*.cs]
 # Newline settings
@@ -253,7 +256,11 @@ csharp_preserve_single_line_statements = true
 dotnet_diagnostic.IDE0060.severity = warning
 
 # Nullable are treated as errors
+dotnet_diagnostic.CS8618.severity = error
 dotnet_diagnostic.CS8625.severity = error
+
+# SA1500: Braces for multi-line statements should not share line
+dotnet_diagnostic.SA1500.severity = none
 
 [tests/**/*.{cs,vb}]
 
