--- a/src/OffDotNet.CodeAnalysis/OffDotNet.CodeAnalysis.csproj
+++ b/src/OffDotNet.CodeAnalysis/OffDotNet.CodeAnalysis.csproj
@@ -1,1 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="Microsoft.Extensions.Localization" />
+    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" />
+  </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="OffDotNet.CodeAnalysis.Pdf"/>
+    <InternalsVisibleTo Include="OffDotNet.CodeAnalysis.Tests"/>
+    <InternalsVisibleTo Include="OffDotNet.CodeAnalysis.Pdf.Tests"/>
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2"/>
+  </ItemGroup>
+</Project>
